--- a/templates/guide.html
+++ b/templates/guide.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Welcome | Swampscape{% endblock %}
+{% block title %}{{ guide.name }} | Swampscape{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
 
 {% block body %}
-<h1>Welcome</h1>
+<h1>{{ guide.name }}</h1>
 {% endblock %}
