Add the skeleton for the main guides page
Not exactly sure what's gonna go in here but I'm pretty sure this page
will exist

--- a/templates/guides.html
+++ b/templates/guides.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}???{% endblock %}
+{% block title %}Guides{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
 
 {% block body %}
-<p>Sorry, we couldn't find what you were looking for...</p>
+<h1>Guides</h1>
 {% endblock %}
