--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <!-- links to favicons, css, etc.. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="/dist/css/master.css">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} | Swampscape</title>
     {% endblock %}
   </head>
 
