--- a/templates/guide.html
+++ b/templates/guide.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ guide.name }} | Swampscape{% endblock %}
+{% block title %}{{ guide.name }}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
