--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Welcome | Swampscape{% endblock %}
+{% block title %}Welcome{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
