Parse google sheets API, make skeleton guides pgs
Skeleton pages for the guides, connect to the API, store credentials,
print out the results to guide pages.

Next up: make this happen once on startup (the pull down from sheets)
and then set a timer to have it happen again.

--- a/templates/guides.html
+++ b/templates/guides.html
@@ -5,5 +5,10 @@
 {% endblock %}
 
 {% block body %}
-<h1>Guides</h1>
+  <h1>Guides</h1>
+  <ul>
+  {% for guide in guides %}
+  <li><a href="/guides/{{ guide.name | urlencode }}">{{ guide.name }}</a></li>
+  {% endfor %}
+  </ul>
 {% endblock %}
