--- a/templates/guide.html
+++ b/templates/guide.html
@@ -1,9 +1,14 @@
 {% extends "base.html" %}
-{% block title %}{{ guide.name }}{% endblock %}
+{% block title %}{{ name }}{% endblock %}
 {% block head %}
   {{ super() }}
 {% endblock %}
 
 {% block body %}
-<h1>{{ guide.name }}</h1>
+  <h1>{{ name }}</h1>
+  <p>{{ description }}</p>
+  <p>{{ video }}</p>
+  {% if fieldnotes %}
+    <p>{{ fieldnotes }}</p>
+  {% endif %}
 {% endblock %}
