--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block body %}
-<h1>Welcome</h1>
+<img src="/dist/images/0.0.jpg" class="full-size"/>
+<div class="black indent">
+  <p>{{ home['0.2'] }}</p>
+</div>
+<div class="indent">
+  <h2>{{ home['0.5'] }}</h2>
+  <p class="center">Use the slider to see change over time</p>
+</div>
 {% endblock %}
