Use a guide macro

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -82,3 +82,13 @@ footer {
     display: initial;
   }
 }
+
+.two-thirds {
+  display: inline-block;
+  width: 66%;
+}
+
+.one-third {
+  display: inline-block;
+  width: 33%;
+}
