--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/">Logo goes here</a></li> <!-- logo -->
+        <li><a href="/">Logo goes here</a></li>
         <li><a href="/about">About Us</a></li> 
         <li><a href="/swamp-symphony">Symphony</a></li>
         <li><a href="/guides">Guides</a></li> 
