--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,8 @@
 {% block body %}
 {{ image('0.0.jpg') }}
 <div class="black indent">
-  <p>{{ home['0.2'] }}</p>
+  <p class="two-thirds">{{ home['0.2'] }}</p>
+  <div class="one-third"></div>
 </div>
 <div class="indent">
   <h2>{{ home['0.5'] }}</h2>
