Add icons to footer

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -5,9 +5,12 @@ html, body {
   padding: 0;
 }
 
-nav {
+ul {
+  list-style-type: none;
+}
+
+nav, footer {
   ul {
-    list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
