--- a/templates/macros.html
+++ b/templates/macros.html
@@ -8,7 +8,14 @@
   <div class="indent black">
     <h2>{{ g.scapename }}</h3>
     <p class="two-thirds">{{ g.description }}</p>
-    <div class="one-third"></div>
+    <div class="one-third">
+      <ul>
+        <li><i class="fas fa-play-circle"></i> Play Film</li>
+        <li>Visit Landscape</li>
+        <li><i class="fas fa-map-marker-alt"></i> Open Map</li>
+        <li>Other Swampscapes</li>
+      </ul>
+    </div>
   </div>
 </div>
 {% endmacro %}
