--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/dist/css/master.css">
     <title>{% block title %}{% endblock %} | Swampscape</title>
     {% endblock %}
@@ -25,12 +25,12 @@
 
     <footer>
       <ul>
-        <li><a href="mailto:{{ home['0.3.5'] }}">Email</a></li>
-        <li><a href="{{ home['0.3.0'] }}">Facebook</a></li>
-        <li><a href="{{ home['0.3.1'] }}">Twitter</a></li>
-        <li><a href="{{ home['0.3.2'] }}">Instagram</a></li>
-        <li><a href="{{ home['0.3.3'] }}">Vimeo</a></li>
-        <li><a href="{{ home['0.3.4'] }}">Youtube</a></li>
+        <li><a href="mailto:{{ home['0.3.5'] }}"><i class="fas fa-envelope"></i> {{ home['0.3.5'] }}</a></li>
+        <li><a href="{{ home['0.3.0'] }}"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="{{ home['0.3.1'] }}"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="{{ home['0.3.2'] }}"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="{{ home['0.3.3'] }}"><i class="fab fa-vimeo-v"></i></a></li>
+        <li><a href="{{ home['0.3.4'] }}"><i class="fab fa-youtube"></i></a></li>
       </ul>
     </footer>
   </body>
