--- a/templates/landing.html
+++ b/templates/landing.html
@@ -9,7 +9,7 @@
 {{ image('0.0.jpg') }}
 <div class="black indent">
   <p class="two-thirds">{{ home['0.2'] }}</p>
-  <div class="one-third"></div>
+  <div class="controls"></div>
 </div>
 <div class="indent">
   <h2>{{ home['0.5'] }}</h2>
