--- a/templates/macros.html
+++ b/templates/macros.html
@@ -8,12 +8,12 @@
   <div class="indent black">
     <h2>{{ g.scapename }}</h3>
     <p class="two-thirds">{{ g.description }}</p>
-    <div class="one-third">
+    <div class="controls">
       <ul>
-        <li><i class="fas fa-play-circle"></i> Play Film</li>
-        <li>Visit Landscape</li>
-        <li><i class="fas fa-map-marker-alt"></i> Open Map</li>
-        <li>Other Swampscapes</li>
+        <li><button><i class="fas fa-play-circle"></i> Play Film</button></li>
+        <li><button>Visit Landscape</button></li>
+        <li><button><i class="fas fa-map-marker-alt"></i> Open Map</button></li>
+        <li><button>Other Swampscapes</button></li>
       </ul>
     </div>
   </div>
