--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <body>
     <nav>
       <ul>
-        <li><a href="/"><img src="/dist/images/logo.png"/></a></li>
+        <li id="logo"><a href="/"><img src="/dist/images/logo.png"/></a></li>
         <li><a href="/about">About Us</a></li> 
         <li><a href="/swamp-symphony">Symphony</a></li>
         <li><a href="/guides">Guides</a></li> 
