--- a/templates/landing.html
+++ b/templates/landing.html
@@ -9,7 +9,9 @@
 {{ image('0.0.jpg') }}
 <div class="black indent">
   <p class="two-thirds">{{ home['0.2'] }}</p>
-  <div class="controls"></div>
+  <div class="controls">
+    <button class="watch">Watch the trailer <i class="fas fa-play-circle"></i></button>
+  </div>
 </div>
 <div class="indent">
   <h2>{{ home['0.5'] }}</h2>
