--- a/templates/about.html
+++ b/templates/about.html
@@ -13,6 +13,12 @@
 {%- endfor %}
 {# info #}
 <div class="indent">
-  <h1>About Us</h1>
+  <h2>About Us</h2>
+  <ul class="tab-buttons">
+    <li>Companion Platforms</li>
+    <li>Ed Resources</li>
+    <li>Credits</li>
+  </ul>
+  {# content for all of them #}
 </div>
 {% endblock %}
