--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
     <footer>
       <ul>
-        <li><a href="mailto:{{ home['0.3.5'] }}"><i class="fas fa-envelope"></i> {{ home['0.3.5'] }}</a></li>
+        <li><a href="mailto:{{ home['0.3.5'] }}"><i class="fas fa-envelope"></i> {{ home['0.3.5'] | capitalize }}</a></li>
         <li><a href="{{ home['0.3.4'] }}"><i class="fab fa-youtube"></i></a></li>
         <li><a href="{{ home['0.3.3'] }}"><i class="fab fa-vimeo-v"></i></a></li>
         <li><a href="{{ home['0.3.2'] }}"><i class="fab fa-instagram"></i></a></li>
