--- a/templates/macros.html
+++ b/templates/macros.html
@@ -11,9 +11,13 @@
     <div class="controls">
       <ul>
         <li><button><i class="fas fa-play-circle"></i> Play Film</button></li>
-        <li><button>Visit Landscape</button></li>
+        <li><button>
+<svg class="visit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.5 83"><defs><style>.cls-1{fill:none;stroke-miterlimit:10;stroke-width:8px;}</style></defs><ellipse class="everglade" cx="44.25" cy="40.75" rx="17.25" ry="17.75"/><path class="cls-1 everglade" d="M11.66,55.5a37.49,37.49,0,1,0,.2-15" transform="translate(-4.5 -7)"/><polygon class="everglade" points="7.75 41.15 0 52 15.5 52 7.75 41.15"/></svg>
+            Visit Landscape</button></li>
         <li><button><i class="fas fa-map-marker-alt"></i> Open Map</button></li>
-        <li><button>Other Swampscapes</button></li>
+        <li><button>
+            <svg class="exit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 87 83"><defs><style>.cls-2,.cls-3{fill:none;stroke-miterlimit:10;}.cls-2{stroke-width:8px;}.cls-3{stroke-width:7px;}</style></defs><path class="cls-2 nepal" d="M11.66,55.5a37.49,37.49,0,1,0,.2-15" transform="translate(-3 -7)"/><line class="nepal cls-3" y1="41" x2="46" y2="41"/><line class="cls-3 nepal" x1="27.5" y1="23.5" x2="47.5" y2="43.5"/><line class="nepal cls-3" x1="28" y1="58" x2="47.5" y2="38.5"/></svg>
+            Other Swampscapes</button></li>
       </ul>
     </div>
   </div>
