--- a/templates/about.html
+++ b/templates/about.html
@@ -14,15 +14,15 @@
 {# info #}
 <div class="indent">
   <h2>About Us</h2>
-  <ul class="tab-buttons">
-    <li>Companion Platforms</li>
-    <li>Ed Resources</li>
-    <li>Credits</li>
+  <ul id="tab-buttons">
+    <li class="t3-3">Companion Platforms</li>
+    <li class="t3-2">Ed Resources</li>
+    <li class="t3-1">Credits</li>
   </ul>
   <br/>
   {# content for all of them #}
   {% for i in range(0, 4) %}
-    <div id="3.{{i}}" class="tab{{" active" if i === 0 else ""}}">
+    <div class="t3-{{i}} tab{{" active" if i === 0 else ""}}">
       {{ about["3." + i] | nl2br | safe }}
     </div>
   {% endfor %}
