--- a/sass/master.scss
+++ b/sass/master.scss
@@ -72,6 +72,9 @@ div.indent {
   h2 {
     text-align: center;
   }
+  ul{
+    list-style-type: disc;
+  }
 }
 
 div.black {
@@ -84,6 +87,10 @@ div.black {
       color: $nepal;
     }
   }
+
+  ul {
+    list-style-type: none;
+  }
 }
 
 .full-size {
@@ -95,7 +102,6 @@ div.black {
 }
 
 footer {
-  //height: 60px;
   width: auto;
   padding: 0 5%;
   background-color: $black;
@@ -165,6 +171,7 @@ button {
   background-color: $nepal;
   width: 90%;
   margin-left: 10%;
+  margin-top: 150px;
   padding: 10px 0;
   border-radius: 5px;
   i.fas {
@@ -217,3 +224,29 @@ svg {
   }
 }
 
+body {
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0; bottom: 0; left: 0; right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+  padding: 60px 5%;
+
+  &.up {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  button {
+    color: white;
+    float: right;
+  }
+  .popup {
+    margin-top: 100px;
+  }
+}
