--- a/templates/guides.html
+++ b/templates/guides.html
@@ -3,6 +3,10 @@
 {% block title %}Guides{% endblock %}
 {% block head %}
   {{ super() }}
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvQTkRucJxFbcJ8ikHMdaKzHEaWiBCPhY&callback=initMap">
+  </script>
+  <script type="text/javascript" src="/dist/js/map.js"></script>
 {% endblock %}
 
 {% block body %}
@@ -10,4 +14,10 @@
   {% for i in range(1, guides.length) %}
     {{ guide(guides[i]) }}
   {% endfor %}
+  <div class="overlay" id="map">
+    <button onclick='closeOverlay()'>Close X</button>
+    <div class="popup" id="mapPopup">
+      <iframe src="https://snazzymaps.com/embed/67886" width="100%" height="600px" style="border:none;"></iframe>
+    </div>
+  </div>
 {% endblock %}
