Add the juxtapose maps

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -16,5 +16,12 @@
 <div class="indent">
   <h2>{{ home['0.5'] }}</h2>
   <p class="center">Use the slider to see change over time</p>
+  <br/>
+  <div class="juxtapose">
+    <img src="/dist/images/1904.png" class="full-size" />
+    <img src="/dist/images/2011.png" class="full-size" />
+  </div>
+  <script src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
 </div>
 {% endblock %}
