--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
 {{ image('3.' + i + '.jpg', 'tab') }}
 {%- endfor %}
 {# info #}
-<div class="indent">
+<div class="indent about">
   <h2>About Us</h2>
   <ul id="tab-buttons">
     <li class="t3-3">Companion Platforms</li>
