--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
       <ul>
         <li id="logo"><a href="/"><img src="/dist/images/logo.png"/></a></li>
         <li><a href="/about">About Us</a></li> 
-        <li><a href="/swamp-symphony">Symphony</a></li>
+        <li><a href="/swamp-symphony">SwampSymphony</a></li>
         <li><a href="/guides">Guides</a></li> 
       </ul>
     </nav>
