--- a/sass/_constants.scss
+++ b/sass/_constants.scss
@@ -34,12 +34,12 @@ h4, h5, h6 {
   font-size: 20px;
 }
 
-p {
+p, li {
   font-family: $copy;
   font-size: 18px;
 }
 
-li, a, button {
+a, button {
   font-family: $copy;
   font-size: 14px;
 }
