--- a/templates/symphony.html
+++ b/templates/symphony.html
@@ -2,7 +2,23 @@
 {% block title %}Swamp Symphony{% endblock %}
 {% block head %}
   {{ super() }}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.1.5/Tone.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/draggabilly/2.2.0/draggabilly.pkgd.min.js"></script>
+  <script src="/dist/js/Interface.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block body %}
+<div id="symphony-landing">
+  <img class="full-size" src="/dist/images/2.0.jpg" />
+  <div id="symphony-copy" class="indent">
+    <h2>SWAMPSYMPHONY</h2>
+    <button onclick="startComposition()" class="two-thirds"><i class="fas fa-volume-up"></i> {{ symphony['2.0'] }}</button>
+    <button onclick="slideOver()" class="controls">&raquo; Make your own soundscape!</button>
+  </div>
+</div>
+<div id="symphony-player">
+  <div id="sliders"></div>
+</div>
+<script type="text/javascript" src="/dist/js/symphony.js"></script>
 {% endblock %}
