--- a/templates/symphony.html
+++ b/templates/symphony.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Swamp Symphony{% endblock %}
 {% block head %}
+  <link rel="stylesheet" href="/dist/css/examples.css" />
   {{ super() }}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tone/13.1.5/Tone.min.js"></script>
@@ -17,8 +18,28 @@
     <button onclick="slideOver()" class="controls">&raquo; Make your own soundscape!</button>
   </div>
 </div>
-<div id="symphony-player">
-  <div id="sliders"></div>
+<div class="indent" id="symphony-player">
+  <div id="Content"><div id="sliders"></div></div>
+  <button id="startPlay" class="watch" onclick='togglePlay()'>Start</button>
+  <p class="center">{{ symphony['2.1'] }}</p>
+  <a href="/dist/sounds.zip"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 73.5"><defs><style>.cls-1{fill:none;stroke:#000;stroke-miterlimit:10;stroke-width:7px;}</style></defs><title>download</title><line class="cls-1" x1="3.5" y1="48" x2="3.5" y2="73"/><line class="cls-1" y1="70" x2="80" y2="70"/><line class="cls-1" x1="76.5" y1="73.5" x2="76.5" y2="48"/><line class="cls-1" x1="37.5" y1="57" x2="54.5" y2="40"/><line class="cls-1" x1="42.5" y1="57" x2="25.5" y2="40"/><line class="cls-1" x1="39.5" y1="51" x2="39.5"/></svg> Download Sounds</a>
+  <div id="iconContainer">
+    <div id="soundIcons">
+    {% for i in range(0, 10) %}
+      <div>
+        {% if i < 5 %}
+          <p class="caption">{{ symphony['2.2.' + i] }}</p>
+        {% endif %}
+
+        <img id='2-2-{{i}}' class="animalIcon" src="/dist/images/icons/2.2.{{i}}.png" draggable="true" ondragstart="drag(event)"/>
+
+        {% if i >= 5 %}
+          <p class="caption">{{ symphony['2.2.' + i] }}</p>
+        {% endif %}
+      </div>
+    {% endfor %}
+    </div>
+  </div>
 </div>
 <script type="text/javascript" src="/dist/js/symphony.js"></script>
 {% endblock %}
