--- a/sass/master.scss
+++ b/sass/master.scss
@@ -311,6 +311,10 @@ div#symphony-copy {
 }
 
 div#symphony-landing {
+  img {
+    height: 600px;
+  }
+
   position: relative;
   top: 0;
   left: 0;
@@ -334,7 +338,7 @@ div#symphony-player {
   transition: left 1s;
   margin-top: 60px;
   width: 100%;
-  height: 825px;
+  height: 840px;
 
   &.slid {
     left: 0%;
