Add all the favicon stuff
Used Real Favicon Generator

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/dist/css/master.css">
     <script type="text/javascript" src="/dist/js/master.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/dist/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/dist/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/dist/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/dist/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/dist/favicons/safari-pinned-tab.svg" color="#839b12">
+    <link rel="shortcut icon" href="/dist/favicons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="msapplication-config" content="/dist/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#839b12">
     <title>{% block title %}{% endblock %} | Swampscape</title>
     {% endblock %}
   </head>
