Move over the download sounds button a bit

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -354,6 +354,7 @@ div#symphony-player {
   }
 
   a {
+    margin-left: 5%;
     text-decoration: none;
     color: black;
     position: relative;
