--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <nav>
       <ul>
         <li id="logo"><a href="/"><img src="/dist/images/logo.png"/></a></li>
+        <li id="dropdown" onclick="toggleMenu()"><i class="fas fa-bars"></i></li>
         <li><a href="/about">About Us</a></li> 
         <li><a href="/swamp-symphony">SwampSymphony</a></li>
         <li><a href="/guides">Guides</a></li> 
