--- a/templates/symphony.html
+++ b/templates/symphony.html
@@ -15,7 +15,8 @@
   <div id="symphony-copy" class="indent">
     <h2>SWAMPSYMPHONY</h2>
     <button onclick="startComposition()" class="two-thirds"><i class="fas fa-volume-up"></i> {{ symphony['2.0'] }}</button>
-    <button onclick="slideOver()" class="controls">&raquo; Make your own soundscape!</button>
+    <button id="enterSymphony" onclick="slideOver()" class="controls">&raquo; Make your own soundscape!</button>
+    <button id="seeSymphony">Tap the paragraph above to hear the symphony. See this site on a computer or tablet to create your own soundscape.</button>
   </div>
 </div>
 <div class="indent" id="symphony-player">
