--- a/templates/guides.html
+++ b/templates/guides.html
@@ -12,7 +12,7 @@
 {% block body %}
 <div id="guidebody">
   {{ guide(guides[0], 'active') }}
-  {% for i in range(1, guides.length) %}
+  {% for i in range(1, 6) %}
     {{ guide(guides[i]) }}
   {% endfor %}
   <div class="overlay" id="map">
