Give color feedback on hover on swampscape

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -301,6 +301,9 @@ div#symphony-copy {
   button {
     font-size: 18px;
     text-align: right;
+    &:hover {
+      color: $grey;
+    }
   }
   .controls {
     position: relative;
