--- a/sass/master.scss
+++ b/sass/master.scss
@@ -16,6 +16,7 @@ ul {
 
 nav, footer {
   background-color: $black;
+  padding: 0 20px;
   ul {
     margin: 0;
     padding: 0;
@@ -40,12 +41,16 @@ nav, footer {
     }
     &:first-child {
       float: left;
-      padding-left: 0;
-      margin-left: 0;
+      a {
+        padding-left: 0;
+        margin-left: 0;
+      }
     }
     &:last-child {
-      padding-right: 0;
-      margin-right: 0;
+      a {
+        padding-right: 0;
+        margin-right: 0;
+      }
     }
   }
 }
@@ -426,7 +431,7 @@ div#symphony-player {
     padding: 0 10%;
   }
   nav {
-    padding: 0 7%;
+    padding: 0 10%;
     margin-bottom: 5px;
   }
   footer {
