--- a/templates/symphony.html
+++ b/templates/symphony.html
@@ -16,7 +16,7 @@
   <div id="symphony-copy" class="indent">
     <h2>SWAMP SYMPHONY</h2>
     <button onclick="startComposition()" class="two-thirds"><i class="fas fa-volume-up"></i> {{ symphony['2.0'] }}</button>
-    <button id="enterSymphony" onclick="slideOver()" class="controls">&raquo; Make your own soundscape!</button>
+    <button id="enterSymphony" onclick="slideOver()" class="controls watch">&raquo; Make your own soundscape!</button>
     <button id="seeSymphony">Tap the paragraph above to hear the symphony. See this site on a computer or tablet to create your own soundscape.</button>
   </div>
 </div>
